Fix outline on firefox

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,6 +97,9 @@ outline: none;
 padding: 0;
 appearance: none;
 }
+button::-moz-focus-inner, input[type="submit"]::-moz-focus-inner, input[type="button"]::-moz-focus-inner {
+border: none;
+}
 img.emoji {
 height: 1em;
 width: 1em;
